System Information
Mac OS 10.8.5 Nvidia GTX560
Blender Version
Broken: 2.71 (9337574)
Short description of error
I'm using a blend texture "brightness adjust" parameter to animate hair length. The animation is working correctly but I can't change the keyframe interpolation because the keyframes for the animated parameter are not visible in the Dope Sheet or Graph Editor.
- Open
- Select Texture - Particle System - Hair length tex
- Dope sheet and Graph editor are empty