Bugfix T42048: Keyframes missing when animating particle system blend texture parameters

Textures attached to particle systems are now get their animation data listed
under the particle systems they are attached to now. This is the most convenient
and direct way that these can get included